--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Himani Jaiswal # your name (or website title) here
-logo: "/images/logo.png?raw=true" # your photo (or logo) here
+logo: "https://media.licdn.com/dms/image/D5635AQE1kZgHybbYBA/profile-framedphoto-shrink_200_200/0/1722524033340?e=1723186800&v=beta&t=bNMnvGzEZ44ZchvZG9G373OxQNgqBr1iJnXjglEqEY4" # your photo (or logo) here
 description: > 
 About
 MY BACKGROUND
